<resources>
    <string name="stream_ui_poll_question_label">Question</string>
    <string name="stream_ui_poll_ask_a_question_hint">Ask a question</string>
    <string name="stream_ui_poll_options_label">Options</string>
    <string name="stream_ui_poll_add_an_option_label">Add an option</string>
    <string name="stream_ui_poll_add_an_option_hint">Add an option</string>
    <string name="stream_ui_poll_multiple_answers_label">Multiple answers</string>
    <string name="stream_ui_poll_max_number_of_answers_hint">Max number of answers</string>
    <string name="stream_ui_poll_anonymous_poll_label">Anonymous poll</string>
    <string name="stream_ui_poll_suggest_an_option_label">Suggest an option</string>
    <string name="stream_ui_poll_add_a_comment_label">Add a comment</string>
    <string name="stream_ui_poll_create_a_poll_title">Create a poll</string>
    <string name="stream_ui_poll_options_title">Poll Options</string>
    <string name="stream_ui_poll_results_title">Poll Results</string>
    <string name="stream_ui_poll_this_is_already_an_option">This is already an option</string>
    <string name="stream_ui_poll_vote_counts">%d votes</string>
    <string name="stream_ui_attachment_gallery_count">%1$d of %2$d</string>
    <string name="stream_ui_attachment_gallery_date">Sent %1$s at %2$s</string>
    <string name="stream_ui_attachment_gallery_reply">Reply</string>
    <string name="stream_ui_attachment_gallery_delete">Delete</string>
    <string name="stream_ui_attachment_gallery_show_in_chat">Show in chat</string>
    <string name="stream_ui_attachment_gallery_save_media">Save Media</string>
    <string name="stream_ui_attachment_gallery_share">Share Media</string>
    <string name="stream_ui_attachment_gallery_share_error">Could not share attachment</string>
    <string name="stream_ui_attachment_unsupported_attachment">Unsupported attachment</string>
    <string name="stream_ui_attachment_gallery_preview_preparing">Preparing…</string>
    <string name="stream_ui_attachment_gallery_video_display_error">Error. Video can\'t be displayed</string>
    <string name="stream_ui_attachment_gallery_overview_title">Photos</string>
    <string name="stream_ui_attachment_list_recording">Recording</string>
    <string name="stream_ui_channel_list_empty">No channels available</string>
    <string name="stream_ui_channel_list_you">You</string>
    <string name="stream_ui_channel_list_view_info">View info</string>
    <string name="stream_ui_channel_list_leave_channel">Leave Group</string>
    <string name="stream_ui_channel_list_dismiss_dialog">Cancel</string>
    <string name="stream_ui_channel_list_delete_channel">Delete conversation</string>
    <plurals name="stream_ui_channel_list_member_info">
        <item quantity="one">%1$d Member, %2$d Online</item>
        <item quantity="other">%1$d Members, %2$d Online</item>
    </plurals>
    <string name="stream_ui_channel_list_delete_confirmation_title">Delete Channel</string>
    <string name="stream_ui_channel_list_delete_confirmation_message">Are you sure you want to permanently delete this conversation?</string>
    <string name="stream_ui_channel_list_delete_confirmation_positive_button">Delete</string>
    <string name="stream_ui_channel_list_delete_confirmation_negative_button">Cancel</string>
    <string name="stream_ui_channel_list_error_delete_channel">Failed to delete channel</string>
    <string name="stream_ui_channel_list_error_leave_channel">Failed to leave channel</string>
    <string name="stream_ui_channel_list_draft_message_label">Draft:</string>
    <string name="stream_ui_channel_list_header_connected">Stream Chat</string>
    <string name="stream_ui_channel_list_header_disconnected">Waiting for network</string>
    <string name="stream_ui_channel_list_header_offline">Disconnected</string>
    <string name="stream_ui_mention" translatable="false">\@%1$s</string>
    <string name="stream_ui_yesterday">Yesterday</string>
    <string name="stream_ui_ok">OK</string>
    <string name="stream_ui_user_status_online">Online</string>
    <string name="stream_ui_user_status_last_seen">Last seen %1$s</string>
    <string name="stream_ui_user_status_last_seen_just_now">Last seen just now</string>
    <string name="stream_ui_message_preview_sender">&lt;b&gt;%1$s&lt;/b&gt; in &lt;b&gt;%2$s&lt;/b&gt;</string>
    <string name="stream_ui_message_composer_send_to_channel">Also send to channel</string>
    <string name="stream_ui_message_composer_mode_reply">Reply to message</string>
    <string name="stream_ui_message_composer_mode_edit">Edit Message</string>
    <string name="stream_ui_message_composer_hint_normal">Write something here</string>
    <string name="stream_ui_message_composer_hint_cannot_send_message">You can\'t send messages in this channel</string>
    <string name="stream_ui_message_composer_mention_template" translatable="false">\@%1$s</string>
    <string name="stream_ui_message_composer_mention_suggestion_channel_subtitle">Notify everyone in this channel</string>
    <string name="stream_ui_message_composer_mention_suggestion_here_subtitle">Notify every online member in this channel</string>
    <string name="stream_ui_message_composer_mention_suggestion_role_subtitle">Notify all %1$s members</string>
    <string name="stream_ui_message_composer_instant_commands">Instant Commands</string>
    <string name="stream_ui_message_composer_command_template" translatable="false">/%1$s %2$s</string>
    <string name="stream_ui_message_composer_gallery_access">Allow access to your Gallery</string>
    <string name="stream_ui_message_composer_files_access">Allow access to your Files</string>
    <string name="stream_ui_message_composer_camera_access">Allow access to your Camera</string>
    <string name="stream_ui_message_composer_recent_files">Recent Files</string>
    <string name="stream_ui_message_composer_no_files">There is no photo or video.</string>
    <string name="stream_ui_message_composer_file_not_supported">File type is not supported</string>
    <string name="stream_ui_message_composer_visual_media_access_add_more">Add more</string>
    <string name="stream_ui_message_composer_files_allow_audio_access">Allow access to audio files</string>
    <string name="stream_ui_message_composer_files_allow_visual_media_access">Allow access to visual media</string>
    <string name="stream_ui_message_composer_files_allow_more_visual_media">Allow access to more visual media</string>
    <string name="stream_ui_message_composer_error_message_length">Max message length (%d) exceeded.</string>
    <string name="stream_ui_message_composer_error_file_size">File is too large - max %s.</string>
    <string name="stream_ui_message_composer_error_attachment_count">Attachments count (%d) exceeded.</string>
    <string name="stream_ui_message_composer_sending_links_not_allowed">Sending links is not allowed in this conversation.</string>
    <string name="stream_ui_message_composer_slide_to_cancel">Slide to cancel</string>
    <string name="stream_ui_message_composer_hold_to_record_send">Hold to record. Release to send.</string>
    <string name="stream_ui_message_composer_hold_to_record_save">Hold to record. Release to save.</string>
    <string name="stream_ui_message_list_empty">No messages</string>
    <string name="stream_ui_message_list_download_started">Download started</string>
    <string name="stream_ui_message_audio_reply_info">Voice Message</string>
    <string name="stream_ui_message_list_giphy_title">Giphy</string>
    <string name="stream_ui_message_list_giphy_send">Send</string>
    <string name="stream_ui_message_list_giphy_cancel">Cancel</string>
    <string name="stream_ui_message_list_giphy_shuffle">Shuffle</string>
    <string name="stream_ui_message_list_ephemeral_message">Only visible to you</string>
    <string name="stream_ui_message_list_deleted_message">Message deleted</string>
    <string name="stream_ui_message_list_attachment_more_count">+%1$d</string>
    <string name="stream_ui_message_list_attachment_uploading">Uploading %1$d / %2$d …</string>
    <string name="stream_ui_message_list_attachment_upload_complete">Upload complete, processing…</string>
    <string name="stream_ui_message_list_attachment_upload_progress">%1$s / %2$s</string>
    <string name="stream_ui_message_list_pinned_message">Pinned by %s</string>
    <string name="stream_ui_message_list_pinned_message_you">You</string>
    <string name="stream_ui_message_list_thread_footnote_thread_reply">Thread reply</string>
    <string name="stream_ui_message_list_thread_footnote_thread_replies">%d Thread Replies</string>
    <plurals name="stream_ui_message_list_thread_footnote">
        <item quantity="one">@string/stream_ui_message_list_thread_footnote_thread_reply</item>
        <item quantity="other">@string/stream_ui_message_list_thread_footnote_thread_replies</item>
    </plurals>
    <plurals name="stream_ui_message_list_thread_separator">
        <item quantity="one">%d Reply</item>
        <item quantity="other">%d Replies</item>
    </plurals>
    <string name="stream_ui_message_list_unread_separator">Unread Messages</string>
    <string name="stream_ui_message_list_translated">Translated to %s</string>
    <string name="stream_ui_message_list_show_original">&#160;· Show original</string>
    <string name="stream_ui_message_list_show_translation">Show translation</string>
    <string name="stream_ui_quoted_message_poll" translatable="false">📊 %s</string>
    <string name="stream_ui_message_list_reply">Reply</string>
    <string name="stream_ui_message_list_thread_reply">Thread reply</string>
    <string name="stream_ui_message_list_resend_message">Resend</string>
    <string name="stream_ui_message_list_copy_message">Copy Message</string>
    <string name="stream_ui_message_list_mark_as_unread">Mark as Unread</string>
    <string name="stream_ui_message_list_edit_message">Edit Message</string>
    <string name="stream_ui_message_list_flag_message">Flag Message</string>
    <string name="stream_ui_message_list_pin_message">Pin to Conversation</string>
    <string name="stream_ui_message_list_unpin_message">Unpin from Conversation</string>
    <string name="stream_ui_message_list_mute_user">Mute User</string>
    <string name="stream_ui_message_list_unmute_user">Unmute User</string>
    <string name="stream_ui_message_list_block_user">Block user</string>
    <string name="stream_ui_message_list_unblock_user">Unblock user</string>
    <string name="stream_ui_message_list_delete_message">Delete Message</string>
    <plurals name="stream_ui_message_list_message_reactions">
        <item quantity="one">%d Message Reaction</item>
        <item quantity="other">%d Message Reactions</item>
    </plurals>
    <string name="stream_ui_message_list_delete_confirmation_title">Delete Message</string>
    <string name="stream_ui_message_list_delete_confirmation_message">Are you sure you want to permanently delete this message?</string>
    <string name="stream_ui_message_list_delete_confirmation_positive_button">Delete</string>
    <string name="stream_ui_message_list_delete_confirmation_negative_button">Cancel</string>
    <string name="stream_ui_message_list_flag_confirmation_title">Flag Message</string>
    <string name="stream_ui_message_list_flag_confirmation_message">Do you want to send a copy of this message to a moderator for further investigation?</string>
    <string name="stream_ui_message_list_flag_confirmation_positive_button">Flag</string>
    <string name="stream_ui_message_list_flag_confirmation_negative_button">Cancel</string>
    <string name="stream_ui_message_list_footnote_edited_label"> · Edited</string>
    <string name="stream_ui_message_list_footnote_edited_at">Edited %s</string>
    <string name="stream_ui_message_list_attachment_load_failed">The load failed due to an unknown error.</string>
    <string name="stream_ui_message_list_attachment_invalid_url">The load failed due to the invalid url.</string>
</resources>