<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2014-2026 Stream.io Inc. All rights reserved.

    Licensed under the Stream License;
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      https://github.com/GetStream/stream-chat-android/blob/main/LICENSE

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/optionsContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/stream_ui_white_snow"
    app:cardCornerRadius="@dimen/stream_ui_options_menu_corner_radius"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/stream_ui_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        >

        <TextView
            android:id="@+id/reply"
            style="@style/StreamUiMessageOptionItem"
            android:text="@string/stream_ui_attachment_gallery_reply"
            android:textDirection="locale"
            tools:drawableStart="@drawable/stream_ui_ic_arrow_curve_left_grey"
            />

        <TextView
            android:id="@+id/showInChat"
            style="@style/StreamUiMessageOptionItem"
            android:text="@string/stream_ui_attachment_gallery_show_in_chat"
            android:textDirection="locale"
            tools:drawableStart="@drawable/stream_ui_ic_show_in_chat"
            />

        <TextView
            android:id="@+id/saveMedia"
            style="@style/StreamUiMessageOptionItem"
            android:text="@string/stream_ui_attachment_gallery_save_media"
            android:textDirection="locale"
            tools:drawableStart="@drawable/stream_ui_ic_download"
            />

        <TextView
            android:id="@+id/delete"
            style="@style/StreamUiMessageOptionItem"
            android:text="@string/stream_ui_attachment_gallery_delete"
            android:textDirection="locale"
            tools:drawableStart="@drawable/stream_ui_ic_delete"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>
