<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2014-2026 Stream.io Inc. All rights reserved.

    Licensed under the Stream License;
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      https://github.com/GetStream/stream-chat-android/blob/main/LICENSE

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/stream_ui_white"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/stream_ui_white"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/stream_ui_spacing_medium"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/quetionLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/StreamUiTextAppearance.Headline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/stream_ui_poll_question_label"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/question"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:hint="@string/stream_ui_poll_ask_a_question_hint"
                android:layout_marginTop="@dimen/stream_ui_spacing_small"
                android:padding="@dimen/stream_ui_spacing_small"
                android:gravity="center_vertical"
                android:textAppearance="@style/StreamUiTextAppearance.Headline"
                android:background="@drawable/stream_ui_poll_input_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quetionLabel"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/optionsLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/stream_ui_poll_options_label"
                android:layout_marginTop="@dimen/stream_ui_spacing"
                android:textAppearance="@style/StreamUiTextAppearance.Headline"
                app:layout_constraintTop_toBottomOf="@+id/question"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/optionList"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/stream_ui_spacing_small"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/optionsLabel"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/addOption"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:padding="@dimen/stream_ui_spacing_small"
                android:layout_marginTop="@dimen/stream_ui_spacing_small"
                android:textAppearance="@style/StreamUiTextAppearance.Headline"
                android:background="@drawable/stream_ui_poll_input_bg"
                android:gravity="center_vertical"
                android:textColor="@color/stream_ui_text_color_secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/optionList"
                android:text="@string/stream_ui_poll_add_an_option_label"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="@id/multipleAnswersLabel"
                app:layout_constraintEnd_toEndOf="@id/multipleAnswersLabel"
                app:layout_constraintTop_toTopOf="@id/multipleAnswersLabel"
                app:layout_constraintBottom_toBottomOf="@+id/multipleAnswersCount"
                android:background="@drawable/stream_ui_poll_input_bg"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/multipleAnswersLabel"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:text="@string/stream_ui_poll_multiple_answers_label"
                android:layout_marginTop="@dimen/stream_ui_spacing"
                android:padding="@dimen/stream_ui_spacing_small"
                android:gravity="center_vertical"
                android:textAppearance="@style/StreamUiTextAppearance.Headline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addOption"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/multipleAnswersCount"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:hint="@string/stream_ui_poll_max_number_of_answers_hint"
                android:visibility="gone"
                android:background="@null"
                android:inputType="number"
                android:padding="@dimen/stream_ui_spacing_small"
                android:gravity="center_vertical"
                android:textAppearance="@style/StreamUiTextAppearance.Headline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/multipleAnswersLabel"
                />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/multipleAnswersSwitch"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@null"
                android:focusable="false"
                app:tint="@color/stream_ui_grey"
                app:layout_constraintTop_toTopOf="@+id/multipleAnswersLabel"
                app:layout_constraintBottom_toBottomOf="@+id/multipleAnswersLabel"
                app:layout_constraintEnd_toEndOf="@+id/multipleAnswersLabel"
                android:layout_marginEnd="@dimen/stream_ui_spacing_small"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/anonymousPollLabel"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:text="@string/stream_ui_poll_anonymous_poll_label"
                android:layout_marginTop="@dimen/stream_ui_spacing_tiny"
                android:padding="@dimen/stream_ui_spacing_small"
                android:gravity="center_vertical"
                android:textAppearance="@style/StreamUiTextAppearance.Headline"
                android:background="@drawable/stream_ui_poll_input_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/multipleAnswersCount"
                />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/anonymousPollSwitch"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@null"
                android:focusable="false"
                app:tint="@color/stream_ui_grey"
                app:layout_constraintTop_toTopOf="@+id/anonymousPollLabel"
                app:layout_constraintBottom_toBottomOf="@+id/anonymousPollLabel"
                app:layout_constraintEnd_toEndOf="@+id/anonymousPollLabel"
                android:layout_marginEnd="@dimen/stream_ui_spacing_small"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/suggestAnOptionLabel"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:text="@string/stream_ui_poll_suggest_an_option_label"
                android:layout_marginTop="@dimen/stream_ui_spacing_tiny"
                android:padding="@dimen/stream_ui_spacing_small"
                android:gravity="center_vertical"
                android:textAppearance="@style/StreamUiTextAppearance.Headline"
                android:background="@drawable/stream_ui_poll_input_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/anonymousPollLabel"
                />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/suggestAnOptionSwitch"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@null"
                android:focusable="false"
                app:tint="@color/stream_ui_grey"
                app:layout_constraintTop_toTopOf="@+id/suggestAnOptionLabel"
                app:layout_constraintBottom_toBottomOf="@+id/suggestAnOptionLabel"
                app:layout_constraintEnd_toEndOf="@+id/suggestAnOptionLabel"
                android:layout_marginEnd="@dimen/stream_ui_spacing_small"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/addACommentLabel"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:text="@string/stream_ui_poll_add_a_comment_label"
                android:layout_marginTop="@dimen/stream_ui_spacing_tiny"
                android:padding="@dimen/stream_ui_spacing_small"
                android:gravity="center_vertical"
                android:textAppearance="@style/StreamUiTextAppearance.Headline"
                android:background="@drawable/stream_ui_poll_input_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/suggestAnOptionLabel"
                />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/addACommentLabelSwitch"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@null"
                android:focusable="false"
                app:tint="@color/stream_ui_grey"
                app:layout_constraintTop_toTopOf="@+id/addACommentLabel"
                app:layout_constraintBottom_toBottomOf="@+id/addACommentLabel"
                app:layout_constraintEnd_toEndOf="@+id/addACommentLabel"
                android:layout_marginEnd="@dimen/stream_ui_spacing_small"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>